--- a/.github/workflows/upload.yml
+++ b/.github/workflows/upload.yml
@@ -15,7 +15,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v1
         with:
-          repository: xuanli199/xuanli199.github.io
+          repository: Fu-Yuhan/web
       - name: Set up Node
         uses: actions/setup-node@v2
         with:
